[tool.poetry]
name = "LANGCHAIN-LEVEL-1-APPS"
version = "0.1.0"
description = ""
authors = ["derril filemon <derril.tech@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.4"
jupyterlab = "^4.2.4"
langchain = "^0.3.25"
langchain-core = ">=0.3.58,<1.0.0"
langchain-openai = "^0.1.25"
langchain-community = "^0.3.23"
langchain-text-splitters = "^0.3.8"
python-dotenv = "^1.0.1"
pydantic = ">=2.5.3,<3.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
