[tool.poetry]
name = "LANGCHAIN-LEVEL-1-APPS"
version = "0.1.0"
description = ""
authors = ["derril filemon <derril.tech@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.4"
jupyterlab = "^4.2.4"
langchain-text-splitters = "^0.3.8"
python-dotenv = "^1.0.1"
pydantic = ">=2.5.3,<3.0.0"
langchain = "^0.3.26"
langserve = "^0.3.1"
sse-starlette = "^2.4.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
